[package]
name = "apdu_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
ethereum-types = "0.14.1"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0"
ledger-proto = { git = "https://github.com/ledger-community/rust-ledger.git" }